SET(PNAME "TLibC")
project(${PNAME})

cmake_minimum_required(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${${PNAME}_SOURCE_DIR}/cmake/Modules/;${CMAKE_MODULE_PATH}" )

OPTION(WITH_DEBUG "Use debug" ON)

IF (WITH_DEBUG)
    SET(CMAKE_BUILD_TYPE "Debug")
ELSE()
    SET(CMAKE_BUILD_TYPE "Release")
ENDIF()

IF(WIN32)
	SET(CMAKE_C_FLAGS_DEBUG "/Od /Z7 /W4 /MDd")
	SET(CMAKE_C_FLAGS_RELEASE "/O2 /W4 /MD")
	ADD_DEFINITIONS(-D__LCC__)
ELSE()
	SET(CMAKE_C_FLAGS_DEBUG "-g -Wall")
	SET(CMAKE_C_FLAGS_RELEASE "-O2 -Wall")
ENDIF()

set(INCLUDE  ${${PNAME}_SOURCE_DIR}/include)
set(SOURCE  ${${PNAME}_SOURCE_DIR}/source)
set(BINARY  ${${PNAME}_BINARY_DIR})

add_subdirectory(source)
SET(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME ${PNAME})

install(DIRECTORY cmake DESTINATION ".")
install(DIRECTORY include DESTINATION ".")
