find_package(ZLIB REQUIRED)
find_package(MySQL REQUIRED)

set(GEN_PATH ${BINARY}/gen)
execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${GEN_PATH})


set(RE2C_XML_FILE ${SOURCE}/protocol/tlibc_xml_reader_l.re)
set(RE2C_XML_HEADER ${GEN_PATH}/tlibc_xml_reader_l.h)
set(RE2C_XML_OUTPUTS ${GEN_PATH}/tlibc_xml_reader_l.c)

set(RE2C_XLSX_WORKBOOK_FILE ${SOURCE}/protocol/tlibc_xlsx_reader_workbook_l.re)
set(RE2C_XLSX_WORKBOOK_HEADER ${GEN_PATH}/tlibc_xlsx_reader_workbook_l.h)
set(RE2C_XLSX_WORKBOOK_OUTPUTS ${GEN_PATH}/tlibc_xlsx_reader_workbook_l.c)

set(RE2C_XLSX_WORKBOOK_RELS_FILE ${SOURCE}/protocol/tlibc_xlsx_reader_workbook_rels_l.re)
set(RE2C_XLSX_WORKBOOK_RELS_HEADER ${GEN_PATH}/tlibc_xlsx_reader_workbook_rels_l.h)
set(RE2C_XLSX_WORKBOOK_RELS_OUTPUTS ${GEN_PATH}/tlibc_xlsx_reader_workbook_rels_l.c)

set(RE2C_XLSX_SHAREDSTRING_FILE ${SOURCE}/protocol/tlibc_xlsx_reader_sharedstring_l.re)
set(RE2C_XLSX_SHAREDSTRING_HEADER ${GEN_PATH}/tlibc_xlsx_reader_sharedstring_l.h)
set(RE2C_XLSX_SHAREDSTRING_OUTPUTS ${GEN_PATH}/tlibc_xlsx_reader_sharedstring_l.c)

set(RE2C_XLSX_FILE ${SOURCE}/protocol/tlibc_xlsx_reader_l.re)
set(RE2C_XLSX_HEADER ${GEN_PATH}/tlibc_xlsx_reader_l.h)
set(RE2C_XLSX_OUTPUTS ${GEN_PATH}/tlibc_xlsx_reader_l.c)


FILE(GLOB_RECURSE PLATFORM_FILE_LIST ${INCLUDE}/tlibc/platform/*.h ${SOURCE}/platform/*.c)
source_group("platform" FILES ${PLATFORM_FILE_LIST})

FILE(GLOB_RECURSE CORE_FILE_LIST ${INCLUDE}/tlibc/core/*.h ${SOURCE}/core/*.c ${SOURCE}/core/*.h)
source_group("core" FILES ${CORE_FILE_LIST})

FILE(GLOB_RECURSE PROTOCOL_FILE_LIST ${INCLUDE}/tlibc/protocol/*.h ${SOURCE}/protocol/*.c)
source_group("protocol" FILES ${PROTOCOL_FILE_LIST} 
	${RE2C_XML_FILE} ${RE2C_XML_HEADER} ${RE2C_XML_OUTPUTS}
	${RE2C_XLSX_FILE} ${RE2C_XLSX_HEADER} ${RE2C_XLSX_OUTPUTS}
	${RE2C_XLSX_WORKBOOK_FILE} ${RE2C_XLSX_WORKBOOK_HEADER} ${RE2C_XLSX_WORKBOOK_OUTPUTS}
	${RE2C_XLSX_WORKBOOK_RELS_FILE} ${RE2C_XLSX_WORKBOOK_RELS_HEADER} ${RE2C_XLSX_WORKBOOK_RELS_OUTPUTS}
	${RE2C_XLSX_SHAREDSTRING_FILE} ${RE2C_XLSX_SHAREDSTRING_HEADER} ${RE2C_XLSX_SHAREDSTRING_OUTPUTS}
	)


add_custom_command(OUTPUT ${RE2C_XML_HEADER} ${RE2C_XML_OUTPUTS} 
	${RE2C_XLSX_HEADER} ${RE2C_XLSX_OUTPUTS} 
	${RE2C_XLSX_WORKBOOK_HEADER} ${RE2C_XLSX_WORKBOOK_OUTPUTS}
	${RE2C_XLSX_WORKBOOK_RELS_HEADER} ${RE2C_XLSX_WORKBOOK_RELS_OUTPUTS}
	${RE2C_XLSX_SHAREDSTRING_HEADER} ${RE2C_XLSX_SHAREDSTRING_OUTPUTS}

	COMMAND re2c -c -F -t${RE2C_XML_HEADER} -o${RE2C_XML_OUTPUTS} ${RE2C_XML_FILE}
	COMMAND re2c --case-insensitive -c -t${RE2C_XLSX_HEADER} -o${RE2C_XLSX_OUTPUTS} ${RE2C_XLSX_FILE}
	COMMAND re2c --case-insensitive -c -t${RE2C_XLSX_WORKBOOK_HEADER} -o${RE2C_XLSX_WORKBOOK_OUTPUTS} ${RE2C_XLSX_WORKBOOK_FILE}
	COMMAND re2c --case-insensitive -c -t${RE2C_XLSX_WORKBOOK_RELS_HEADER} -o${RE2C_XLSX_WORKBOOK_RELS_OUTPUTS} ${RE2C_XLSX_WORKBOOK_RELS_FILE}
	COMMAND re2c --case-insensitive -c -t${RE2C_XLSX_SHAREDSTRING_HEADER} -o${RE2C_XLSX_SHAREDSTRING_OUTPUTS} ${RE2C_XLSX_SHAREDSTRING_FILE}
)

INCLUDE_DIRECTORIES(
	${INCLUDE}
	${GEN_PATH}
	${ZLIB_INCLUDE_DIRS}
	${MYSQL_INCLUDE_DIR}
	.
	)

ADD_LIBRARY(${PNAME} ${PROTOCOL_FILE_LIST} ${PLATFORM_FILE_LIST} ${CORE_FILE_LIST} 
	${RE2C_XML_FILE} ${RE2C_XML_HEADER} ${RE2C_XML_OUTPUTS}
	${RE2C_XLSX_FILE} ${RE2C_XLSX_HEADER} ${RE2C_XLSX_OUTPUTS}
	${RE2C_XLSX_WORKBOOK_FILE} ${RE2C_XLSX_WORKBOOK_HEADER} ${RE2C_XLSX_WORKBOOK_OUTPUTS}
	${RE2C_XLSX_WORKBOOK_RELS_FILE} ${RE2C_XLSX_WORKBOOK_RELS_HEADER} ${RE2C_XLSX_WORKBOOK_RELS_OUTPUTS}
	${RE2C_XLSX_SHAREDSTRING_FILE} ${RE2C_XLSX_SHAREDSTRING_HEADER} ${RE2C_XLSX_SHAREDSTRING_OUTPUTS}
	)
SET_TARGET_PROPERTIES(${PNAME} PROPERTIES OUTPUT_NAME tlibc)

INSTALL(TARGETS ${PNAME} ARCHIVE DESTINATION "lib")
