PROJECT(Example)
cmake_minimum_required(VERSION 2.8)

FILE(GLOB FILE_LIST *.h *.c)

SET(CMAKE_MODULE_PATH "$ENV{TLIBC_HOME}/cmake/Modules/;${CMAKE_MODULE_PATH}" )

find_package(TLibC REQUIRED)

INCLUDE_DIRECTORIES(
	${TLIBC_INCLUDE_DIR}
	.
	)
ADD_EXECUTABLE(Example ${FILE_LIST})

SET_TARGET_PROPERTIES(Example PROPERTIES OUTPUT_NAME example)


if(WIN32)
	TARGET_LINK_LIBRARIES(Example ${TLIBC_LIBRARIES})
else()
	TARGET_LINK_LIBRARIES(Example ${TLIBC_LIBRARIES})
endif(WIN32)

