PROJECT(Example)
cmake_minimum_required(VERSION 2.8)
find_package(ZLIB REQUIRED)

FILE(GLOB FILE_LIST *.h *.c)

SET(CMAKE_MODULE_PATH "$ENV{TLIBC_HOME}/cmake/Modules/;${CMAKE_MODULE_PATH}" )

find_package(TLibC REQUIRED)

INCLUDE_DIRECTORIES(
	${TLIBC_INCLUDE_DIR}
	${ZLIB_INCLUDE_DIRS}
	)
ADD_EXECUTABLE(Example ${FILE_LIST})

SET_TARGET_PROPERTIES(Example PROPERTIES OUTPUT_NAME example)


if(WIN32)
	TARGET_LINK_LIBRARIES(Example ${TLIBC_LIBRARIES} ${ZLIB_LIBRARIES})
else()
	TARGET_LINK_LIBRARIES(Example ${TLIBC_LIBRARIES} ${ZLIB_LIBRARIES})
endif(WIN32)

