PROJECT(Example)
cmake_minimum_required(VERSION 2.6)
SET(CMAKE_MODULE_PATH "${Example_SOURCE_DIR}/cmake/Modules/;${CMAKE_MODULE_PATH}" )
find_package(ZLIB REQUIRED)
find_package(TLibC REQUIRED)

FILE(GLOB FILE_LIST *.h *.c)


find_package(TLibC REQUIRED)

INCLUDE_DIRECTORIES(
	${TLIBC_INCLUDE_DIR}
	${ZLIB_INCLUDE_DIRS}
	)
ADD_EXECUTABLE(Example ${FILE_LIST})

SET_TARGET_PROPERTIES(Example PROPERTIES OUTPUT_NAME example)


if(WIN32)
	TARGET_LINK_LIBRARIES(Example ${TLIBC_LIBRARIES} ${ZLIB_LIBRARIES})
else()
	TARGET_LINK_LIBRARIES(Example ${TLIBC_LIBRARIES} ${ZLIB_LIBRARIES})
endif(WIN32)

